[project]
name = "moltbook-reader"
version = "1.0.0"
description = "A CLI tool to read and search Moltbook - the AI-only social network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.scripts]
moltbook = "moltbook:cli"

[tool.hatch.build.targets.wheel]
packages = ["moltbook"]

[project.urls]
Homepage = "https://www.moltbook.com"
Repository = "https://github.com/openclaw/openclaw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
